*** 20010604_8 by greg
Wow, I feel cool or something.

Plugged myself into contributors. Maybe I should start looking at -7...


*** 20010604_7 by leeh
- commited cryptserv now the conflicts are gone


*** 20010604_6 by leeh
- commited initial revision of HIDE_SERVERS_IPS, to mask servers ips
  from everyone (including opers)


*** 20010604_5 by db
- There is a reason we don't use if(foo) { 



*** 20010604_4 by db
- KNF != ircd



*** 20010604_3 by db
Patch from Walter Campbell

Not sure if you want this or not...I personally want this in the stock
Hybrid 6 tree...

1.  Remove the useless STATS b, e, and f requests
2.  Add STATS_P_NOTICE, so that admins do not have to #define
    STATS_NOTICE just to see STATS p requests.  I believe that this
    preserves user's privacy, while still giving opers the ability to
    respond to user's queries for help.




*** 20010604_2 by db
- argh I did miss one!



*** 20010604_1 by db
- well. folded in ircd-hybrid-6.0.2-enclinks.tar.gz patches from
  arnvid@karstad.org It compiles at least.
 


*** 20010603_9 by greg
Chances are you're going to hate me for these mods, but so be it!

- documented SPOOF_FREEFORM
  everyone knows this thing exists, and there's no use hiding it, as anyone
  who wants it either has a friend who knows, or can grep.
- adjusted SPOOF_NOTICE to also hide spoofed ilines in /stats I for opers
  as well, working under the assumption that if we don't went people to see
  the spoof notice, we don't want them to see the spoof either
- added TRUE_NO_OPER_FLOOD, again, another hate-me thing. this extends
  NO_OPER_FLOOD to not even delaying an opers flooding, a-la -comstud


*** 20010603_8 by greg
*Throws a bracket at Diane*


*** 20010603_7 by greg
Some trivial, some not so trivial.

- make n/N show up in /stats p even if not in O line
- add more info to umode +x server intro. msg
- add server split notices to umode +x (a-la +ins patch)


*** 20010603_6 by db