@@ -1,3 +1,9 @@
+*** 20010604_9 by jdc
+* Made version.c.SH more like hybrid-7 (based upon Hybrid-team).
+* Added my sorry ass to the list (for my code months prior).
+
+
+
 *** 20010604_8 by greg
 Wow, I feel cool or something.
 
